import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

plugins {
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.jetbrains.kotlin.jvm' version '1.9.23'
	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.23'
	id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.23'
	id 'jacoco'
}

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	ktlint
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
	implementation 'org.jetbrains.kotlin:kotlin-reflect'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	ktlint("com.pinterest.ktlint:ktlint-cli:1.2.1") {
		attributes {
			attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
		}
	}
}

tasks.register("checkLint", JavaExec) {
	group = "verification"
	description = "Check Kotlin code style."
	classpath = configurations.ktlint
	mainClass = "com.pinterest.ktlint.Main"
	args "src/**/*.kt", "**.kts", "!**/build/**"
}

tasks.named("check") {
	dependsOn tasks.named("checkLint")
}

tasks.register("lint", JavaExec) {
	group = "formatting"
	description = "Fix Kotlin code style deviations."
	classpath = configurations.ktlint
	mainClass = "com.pinterest.ktlint.Main"
	jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
	args "-F", "src/**/*.kt", "**.kts", "!**/build/**"
}

task installGitHooks(type: Copy) {
	from new File(rootProject.rootDir, 'hooks/pre-commit')
	into { new File(rootProject.rootDir, '.git/hooks') }
}

build.dependsOn installGitHooks

tasks.withType(KotlinCompile) {
	kotlinOptions {
		freeCompilerArgs += '-Xjsr305=strict'
		jvmTarget = '21'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
